# photo-mgmt

./: .gitignore  CITATION.cff  PhotoMetadata.py  README.md  rename.py  requirements.txt  scan_image.py  setup.cfg
R/: scan_image.R
src/photo-mgmt/: phenocam_ocr.py  scan_image.py
src/photo_mgmt/: create_db.py  phenocam_ocr.py  rename.py  scan_image.py  update.py
