[metadata]
name = photo_mgmt
version = 0.0.1
author = Wade Lieurance
author_email = wlieurance@gmail.com
description = A package to read photo metadata, calculate hashes, and store/update the results in a database. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wlieurance/photo-mgmt
project_urls =
    Bug Tracker = https://github.com/wlieurance/photo-mgmt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
